some new updates

--- a/404.md
+++ b/404.md
@@ -1,9 +1,14 @@
 ---
-title: 404 Page Not Found
-description: You've reached the end of the line. <a href="https://eyechor.github.io">Reload from last save?</a>
+title_tag_text: BAD END
+title: 404 page not found
+banner_text: You've reached the end of the line. <a href="https://eyechor.github.io">Reload from last save?</a>
+description: Error 404 page
+creds: unlocked 404/31212012 possible endings
 permalink: /404.html
 ---
-#BAD END
+# TIP: 
+next time try raising your Intelligence stat
 
 
+#### game progress
 
